--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,15 +8,16 @@ repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "ga.chrom_web.player.multiplayer"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -42,25 +43,34 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
-    implementation group: 'com.google.dagger', name: 'dagger', version: '2.11'
+    implementation 'com.android.support:appcompat-v7:27.0.1'
 
+    implementation group: 'io.reactivex.rxjava2', name: 'rxandroid', version: '2.0.1'
+//    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
+    implementation group: 'com.google.dagger', name: 'dagger', version: '2.11'
+    // ui
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:27.0.1'
+    implementation 'com.android.support:recyclerview-v7:27.0.1'
     implementation 'com.pes.materialcolorpicker:library:1.2.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:2.1.0'
-
+    // new architecture
     implementation "android.arch.lifecycle:runtime:1.0.0"
     implementation "android.arch.lifecycle:extensions:1.0.0-alpha9-1"
     implementation "android.arch.lifecycle:common-java8:1.0.0-beta1"
-
+    // socket
     implementation('io.socket:socket.io-client:1.0.0') {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
+    // api
+    implementation group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '3.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+
+
     implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
     }
